--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="utf-8">
-	<title><%= @title %> - showmeear</title>
+	<title><%= @title %> - g1g2g3-19A</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<script src="js/bootstrap.min.js"></script>
@@ -10,32 +10,9 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		  </button>
-		  <a class="navbar-brand" href="/">Showmeear.com</a>
-		</div>
-
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav">
-			<li <%="class=\"active\"" if @title == "Profile"%> ><a href="/profile">Profile</a></li>
-			<li <%="class=\"active\"" if @title == "Products"%>><a href="/products">Products</a></li>
-			<li <%="class=\"active\"" if @title == "Links"%>><a href="/links">Links</a></li>
-		  </ul>
-		</div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
 	<div class="container">
 		<div class="page-header">
-			<h1><a href="/">Showmeear.com</a></h1>
+			<h1><a href="/">g1g2g3-19A</a></h1>
 		</div>
 		<%= yield %>
 	</div>
