--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,8 +6,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<script src="js/bootstrap.min.js"></script>
-	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-
+	<!-- <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script> -->
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap-select.css">
+	<script src="js/bootstrap-select.js"></script>
 </head>
 <body>
 	<div class="container">
